JAVA-23697 Upgrading ejb-beans module