@@ -85,6 +85,30 @@
             <artifactId>joda-time</artifactId>
             <version>${joda-time.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.glassfish.main.extras/glassfish-embedded-all -->
+        <dependency>
+            <groupId>org.glassfish.main.extras</groupId>
+            <artifactId>glassfish-embedded-all</artifactId>
+            <version>7.0.7</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jboss.threads/jboss-threads -->
+        <dependency>
+            <groupId>org.jboss.threads</groupId>
+            <artifactId>jboss-threads</artifactId>
+            <version>3.5.0.Final</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-client-all -->
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-client-all</artifactId>
+            <version>29.0.0.Final</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
@@ -95,10 +119,25 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.wildfly</groupId>
+                    <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
-                    <version>${wildfly.version}</version>
+                    <version>5.0.1.Final</version>
                     <scope>test</scope>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.jboss.osgi.metadata</groupId>
+                            <artifactId>jbosgi-metadata</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>sun.jdk</groupId>
+                            <artifactId>jconsole</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.osgi.metadata</groupId>
+                    <artifactId>jbosgi-metadata</artifactId>
+                    <version>6.0.1.Final</version>
                 </dependency>
             </dependencies>
             <build>
@@ -121,7 +160,7 @@
                                         <artifactItem>
                                             <groupId>org.wildfly</groupId>
                                             <artifactId>wildfly-dist</artifactId>
-                                            <version>${wildfly.version}</version>
+                                            <version>29.0.0.Final</version>
                                             <type>zip</type>
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}</outputDirectory>
@@ -134,7 +173,12 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.1.2</version>
                         <configuration>
+                            <argLine>--add-opens
+                                java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
+                                --add-exports
+                                java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</argLine>
                             <!-- Fork every test because it will launch a separate AS instance -->
                             <forkMode>always</forkMode>
                             <systemProperties>
@@ -179,12 +223,23 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>Central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>jboss-releases</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
     <properties>
-        <arquillian-bom.version>1.6.0.Final</arquillian-bom.version>
-        <tomee-embedded.version>8.0.8</tomee-embedded.version>
+        <arquillian-bom.version>1.7.0.Final</arquillian-bom.version>
+        <tomee-embedded.version>9.1.0</tomee-embedded.version>
         <glassfish-embedded-all.version>6.2.2</glassfish-embedded-all.version>
         <arquillian-glassfish-embedded-3.1.version>1.0.2</arquillian-glassfish-embedded-3.1.version>
-        <wildfly.version>8.2.1.Final</wildfly.version>
+        <wildfly.version>5.0.1.Final</wildfly.version>
         <javax.ejb-api.version>3.2</javax.ejb-api.version>
         <springframework.version>5.2.3.RELEASE</springframework.version>
         <activemq.broker.version>5.16.3</activemq.broker.version>
